--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- SEO META Tags -->
      <meta name="description" content="Discover an all Natural hair growth oil made from neem seed!"/>
 </body>
-<meta name="keywords" content="oil, neem oil , neem seed oil , neem tree oil, hair growth , bald , natural hair ,
+<meta name="keywords" content="oil, neem oil ,benefits of neem seed oil , neem tree oil, hair growth , bald , natural hair ,
 turkey ,hair transplant ,cure baldness , derma roller , natural hair , hair follicle , beard growth , unconnected beard , connect beard"/>
 <meta property="og:image" content="Hair Growth Oil">
 <meta property="og:url" content="https://premiumkwame.github.io/hairgrowthoil/">
