--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ turkey ,hair transplant ,cure baldness , derma roller , natural hair , hair foll
     {
         "@context": "https://schema.org",
         "@type": "E-Commerce",
-        "name" "hairgrowthoil",
+        "name": "hairgrowthoil",
         "description": "Discover an all natural hair growth oil made from neem seed!",
         "url":"https://premiumkwame.github.io/hairgrowthoil/",
         "logo":"https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png",
