--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@ turkey ,hair transplant ,cure baldness , derma roller , natural hair , hair foll
         "mainEntity":{
         "headline":"Neem oil for hair growth",
         "datePublished": "2026-01-19"
-        }
+        },
         "telephone":"0203213512",
         "address":{
             "@type": "PostalAddress",
             "streetAddress": "9 GOME ST",
-            "addressLocality": "P1",
-            "addressRegion": "IL",
-            "postalCode": "233",
+            "addressLocality": "Accra",
+            "addressRegion": "Greater Accra",
+            "postalCode": "00233",
             "addressCountry": "GH",
         },
         "geo": {
