--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ turkey ,hair transplant ,cure baldness , derma roller , natural hair , hair foll
 <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "E-Commerce",
+        "@type": "LocalBusiness",
         "name": "hairgrowthoil",
         "description": "Discover an all natural hair growth oil made from neem seed!",
         "url":"https://premiumkwame.github.io/hairgrowthoil/",
