--- a/index.html
+++ b/index.html
@@ -3,46 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hairgrowthoil</title>
-    <!-- SEO META Tags -->
-     <meta name="description" content="Discover an all Natural hair growth oil made from neem seed!"/>
-<meta name="keywords" content="oil, neem oil ,benefits of neem seed oil , neem tree oil, hair growth , bald , natural hair ,
-turkey ,hair transplant ,cure baldness , derma roller , natural hair , hair follicle , beard growth , unconnected beard , connect beard"/>
-<meta property="og:image" content="https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png">
-<meta property="og:url" content="https://premiumkwame.github.io/hairgrowthoil/">
-<meta property="og;type" content="website">
-<meta property="og:site_name" content="hairgrowthoil">
+    <title>Mave's Neem Oil | Natural Hair Growth Oil</title>
+    
+    <meta name="description" content="Discover an all-natural hair growth oil made from neem seed! Restore your hair and confidence with Mave's Neem Oil."/>
+    <meta name="keywords" content="oil, neem oil, benefits of neem seed oil, neem tree oil, hair growth, bald, natural hair, turkey, hair transplant, cure baldness, derma roller, hair follicle, beard growth"/>
+    <link rel="canonical" href="https://premiumkwame.github.io/hairgrowthoil/">
 
+    <meta property="og:title" content="Get your confidence back | Mave's Neem Oil">
+    <meta property="og:description" content="All Natural Neem Oil for hair growth. FDA approved and potent.">
+    <meta property="og:image" content="https://premiumkwame.github.io/hairgrowthoil/index-image/background.png">
+    <meta property="og:url" content="https://premiumkwame.github.io/hairgrowthoil/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="hairgrowthoil">
 
-<!-- open Graph / Social Media Meta Tags -->
-<meta property="og:title" content="Get your confidence back!!!">
-<meta property="og:description" content="All Natural Neem Oil for hair growth.">
-<meta property="og:image " content="https://premiumkwame.github.io/hairgrowthoil/index-image/background.png">
-<meta property="og:url" content="https://premiumkwame.github.io/hairgrowthoil/">
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="hairgrowthoil">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="All Natural Neem Oil for hair growth">
+    <meta name="twitter:description" content="Mave is your trusted source for hair growth products.">
+    <meta name="twitter:image" content="https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png">
 
-<!--Twitter Card Meta Tags -->
-<meta name="twitter:card" content="summury_large_image">
-<meta name="twitter:title" content="All Natural Neem Oil for hair growth">
-<meta name="twitter:description" content="Mave is your trusted source for hair growth products.">
-<meta name="twitter:image" content="">
-
-<!--Local Business Schema -->
-<script type="application/ld+json">
+    <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "hairgrowthoil",
+        "name": "Mave's Neem Oil",
         "description": "Discover an all natural hair growth oil made from neem seed!",
-        "url":"https://premiumkwame.github.io/hairgrowthoil/",
-        "logo":"https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png",
-        "mainEntity":{
-        "headline":"Neem oil for hair growth",
-        "datePublished": "2026-01-19"
-        },
-        "telephone":"+233203213512",
-        "address":{
+        "url": "https://premiumkwame.github.io/hairgrowthoil/",
+        "logo": "https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png",
+        "image": "https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png",
+        "telephone": "+233203213512",
+        "priceRange": "$$",
+        "address": {
             "@type": "PostalAddress",
             "streetAddress": "9 GOME ST",
             "addressLocality": "Accra",
@@ -55,61 +45,63 @@ turkey ,hair transplant ,cure baldness , derma roller , natural hair , hair foll
             "latitude": 5.539633,
             "longitude": -0.265302
         },
-        "openingHours": [
-           "Mo-Sa 10:00-21:00",
-           "Su 13:00-20:00"
-           ],
-           "hairgrowthoil" "Ghana",
-           "priceRange": "$$",
-           "image" "https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png"
-           "sameAs": [
-           "https://www.facebook.com/mavesneemoil",
-           "https://www.instagram.com/mave_neemoil/",
-           "https://www.twitter.com/mavesneemoil"
-           ]
+        "openingHoursSpecification": [
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+                "opens": "10:00",
+                "closes": "21:00"
+            },
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": "Sunday",
+                "opens": "13:00",
+                "closes": "20:00"
+            }
+        ],
+        "sameAs": [
+            "https://www.facebook.com/mavesneemoil",
+            "https://www.instagram.com/mave_neemoil/",
+            "https://www.twitter.com/mavesneemoil"
+        ]
     }
-</script>
+    </script>
 
-<!-- Canonical URL -->
- <link rel="Canonical" href="https://premiumkwame.github.io/hairgrowthoil/">
-
-
- <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-
 <header>
-<h1>MAVE'S NEEM OIL</h1>
-<nav>
-    <a href="product.html">Products</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-</nav>
+    <div class="logo-container">
+        <h1>MAVE'S NEEM OIL</h1>
+    </div>
+    <nav>
+        <a href="product.html">Products</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
 </header>
 
-<!-- Hero Section -->
 <section class="hero">
-    <div>
+    <div class="hero-content">
         <h2>Discover an all natural hair growth oil made from neem seed!</h2>
-        <p> GET YOUR CONFIDENCE BACK </p>
-         <a href="product.html" class="cta-btn">Buy Now</a>
-    </div>
+        <p>GET YOUR CONFIDENCE BACK</p>
+        <a href="product.html" class="cta-btn">Buy Now</a>
     </div>
 </section>
 
-  <!-- About Section -->
-    <h2 class="section-title" id="about">Why Choose Us?</h2>
-    <section style="padding: 0 50px; max-width: 1000px; margin: auto; font-size: 18px; text-align: center;">
-        <p> Mave's Neem Oil restores your confidence with the hair industries most potent hair growth oil </p>
-        <P> All natural with no side effects, verted and approved by the FDA.</p>
+<main>
+    <section id="about" style="padding: 50px 20px; max-width: 1000px; margin: auto; font-size: 18px; text-align: center;">
+        <h2 class="section-title">Why Choose Us?</h2>
+        <p>Mave's Neem Oil restores your confidence with the hair industry's most potent hair growth oil.</p>
+        <p>All natural with no side effects, vetted and approved by the FDA.</p>
     </section>
+</main>
 
-    <!-- Footer -->
-    <footer id="contact">
-        <p>Contact Us: kransly007@gmail.com | Phone: +233 20 321 3512</p>
-        <p>© 2025 Mave's Neem Oil. All Rights Reserved.</p>
-    </footer>
+<footer id="contact">
+    <p>Contact Us: kransly007@gmail.com | Phone: +233 20 321 3512</p>
+    <p>&copy; 2026 Mave's Neem Oil. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
