--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="All Natural Neem Oil for hair growth">
     <meta name="twitter:description" content="Mave is your trusted source for hair growth products.">
-    <meta name="twitter:image" content="https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png">
+    <meta name="twitter:image" content="https://premiumkwame.github.io/hairgrowthoil/index-image/MNOlogo.png">
 
     <script type="application/ld+json">
     {
@@ -29,8 +29,8 @@
         "name": "Mave's Neem Oil",
         "description": "Discover an all natural hair growth oil made from neem seed!",
         "url": "https://premiumkwame.github.io/hairgrowthoil/",
-        "logo": "https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png",
-        "image": "https://premiumkwame.github.io/hairgrowthoil/index-image/MNO logo.png",
+        "logo": "https://premiumkwame.github.io/hairgrowthoil/index-image/MNOlogo.png",
+        "image": "https://premiumkwame.github.io/hairgrowthoil/index-image/MNOlogo.png",
         "telephone": "+233203213512",
         "priceRange": "$$",
         "address": {
