--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 </section>
 
-<div id="mc_embed_shell">
+<div id="mc_embed_shell" id="email-popup" style="display:none;">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <style type="text/css">
         #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
