--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     border-radius: 8px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.15);
 
-    background: url('index-image/background.png');
+    background: url('index-image/background.png');;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -137,7 +137,7 @@
     border-radius: 4px;
     font-size: 16px;
 }
-        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+    <!--/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.-->
            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
