--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </section>
 
 <div id="mc_embed_shell"  class="popup-container" style="display:none;">
-      <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+      <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css"> -->
   <style type="text/css">
         #mc_embed_signup{
     position: relative;
